# 20231028_analiseRankeamentoAcoes

./: README.md  pyproject.toml  requirements.txt
data/: 2023-10-28_12h43_statusInvest.csv
projeto/: modulo.py
src/: module.py
